timelimit (1.4-2) unstable; urgency=low

  * Refer to GPL-2, not just GPL, in the copyright file.
  * Bump Standards-Version to 3.8.1 with no changes.
  * Add misc:Depends to the binary package.

 -- Peter Pentchev <roam@ringlet.net>  Fri, 10 Apr 2009 16:10:45 +0300

timelimit (1.4-1) unstable; urgency=low

  * New upstream version
    - fixes the options processing - does not try to parse the options
      passed to the executed program.  Closes: #505140.

 -- Peter Pentchev <roam@ringlet.net>  Wed, 12 Nov 2008 11:31:03 +0200

timelimit (1.3-1) unstable; urgency=low

  * New upstream version
    - returns the child process exit code instead of always exiting
      with 0.  Closes: #494629.
  * Update debian/copyright since the different source files have
    different copyright years now.
  * Add many more warning options to CFLAGS, just in case.

 -- Peter Pentchev <roam@ringlet.net>  Wed, 03 Sep 2008 16:54:36 +0300

timelimit (1.1-3) unstable; urgency=low

  * Fix the watchfile
  * Remove the $Ringlet VCS tags from the watchfile and the rules file
  * Bump standards version to 3.8.0 (no changes)
  * Leave "noopt" and "nostrip" option processing to dpkg-buildpackage
  * Honor the "werror" build option
  * Enable build hardening, disabled by the "nohardening" build option
  * Use debhelper 7 to minimize the rules file
  * Convert the copyright to the machine-parseable format and bump
    the Debian packaging copyright year

  * debian/compat
    - bump the debhelper compatibility level to 7
  * debian/control
    - standards version 3.8.0 (no changes)
    - bump the debhelper dependency to version 7
  * debian/copyright
    - fully convert this file to the machine-parseable format
    - bump the debian/* copyright year
  * debian/rules
    - remove the $Ringlet VCS tag
    - let dpkg-buildpackage handle the "noopt" and "nostrip" options and
      set the default CFLAGS
    - pass -Werror to the C compiler if the non-standard "werror" option