@@ -3,6 +3,7 @@ timelimit (1.4-2) unstable; urgency=low
   * Refer to GPL-2, not just GPL, in the copyright file.
   * Bump Standards-Version to 3.8.1 with no changes.
   * Add misc:Depends to the binary package.
+  * Minimize the rules file using debhelper override targets.
 
  -- Peter Pentchev <roam@ringlet.net>  Fri, 10 Apr 2009 16:10:45 +0300
 
